# derogold

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  INSTALL.md  LICENSE  README.md  RELEASE_TEMPLATE.md  docker-build.bat  docker-prepare-linux-arm64-sysroot.bat  docker-prepare-sysroot.bat  vcpkg.json
src/: CMakeLists.txt  version.cmake
src/common/: ArrayRef.h  ArrayView.h  Base58.cpp  Base58.h  BlockingQueue.cpp  BlockingQueue.h  CheckDifficulty.cpp  CheckDifficulty.h  ConsoleHandler.cpp  ConsoleHandler.h  ConsoleTools.cpp  ConsoleTools.h  CryptoNoteTools.cpp  CryptoNoteTools.h  FileMappedVector.cpp  FileMappedVector.h  FileSystemShim.h  IInputStream.cpp  IInputStream.h  IOutputStream.cpp  IOutputStream.h  JsonValue.cpp  JsonValue.h  Math.cpp  Math.h  MemoryInputStream.cpp  MemoryInputStream.h  ObserverManager.h  PathTools.cpp  PathTools.h  ScopeExit.cpp  ScopeExit.h  ShuffleGenerator.h  SignalHandler.cpp  SignalHandler.h  StdInputStream.cpp  StdInputStream.h  StdOutputStream.cpp  StdOutputStream.h  StreamTools.cpp  (+19 more)
src/config/: Ascii.h  CliHeader.h  Config.cpp  Config.h  Constants.h  CryptoNoteCheckpoints.h  CryptoNoteConfig.h  WalletConfig.h  version.h.in
src/crypto/: slow-hash-arm.c  slow-hash-common.h  slow-hash-portable.c  slow-hash-x86.c
src/cryptonotecore/: AddBlockErrorCondition.cpp  AddBlockErrorCondition.h  AddBlockErrors.cpp  AddBlockErrors.h  BlockValidationErrors.cpp  BlockValidationErrors.h  BlockchainCache.cpp  BlockchainCache.h  BlockchainMessages.cpp  BlockchainMessages.h  BlockchainReadBatch.cpp  BlockchainReadBatch.h  BlockchainStorage.cpp  BlockchainStorage.h  BlockchainUtils.cpp  BlockchainUtils.h  BlockchainWriteBatch.cpp  BlockchainWriteBatch.h  CachedBlock.cpp  CachedBlock.h  CachedTransaction.cpp  CachedTransaction.h  Checkpoints.cpp  Checkpoints.h  Core.cpp  Core.h  CoreErrors.cpp  CoreErrors.h  CoreStatistics.h  CryptoNoteBasic.cpp  CryptoNoteBasic.h  CryptoNoteBasicImpl.cpp  CryptoNoteBasicImpl.h  CryptoNoteFormatUtils.cpp  CryptoNoteFormatUtils.h  Currency.cpp  Currency.h  DBUtils.cpp  DBUtils.h  DataBaseErrors.cpp  (+65 more)
src/cryptonoteprotocol/: CryptoNoteProtocolDefinitions.h  CryptoNoteProtocolHandler.cpp  CryptoNoteProtocolHandler.h  CryptoNoteProtocolHandlerCommon.h  ICryptoNoteProtocolObserver.h  ICryptoNoteProtocolQuery.h
src/cryptotest/: main.cpp
src/daemon/: Daemon.cpp  DaemonCommandsHandler.cpp  DaemonCommandsHandler.h  DaemonConfiguration.cpp  DaemonConfiguration.h
src/errors/: Errors.cpp  Errors.h  ValidateParameters.cpp  ValidateParameters.h
src/http/: HttpParser.cpp  HttpParser.h  HttpParserErrorCodes.cpp  HttpParserErrorCodes.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h
src/jsonrpcserver/: JsonRpcServer.cpp  JsonRpcServer.h
src/logger/: Logger.cpp  Logger.h
src/logging/: CommonLogger.cpp  CommonLogger.h  ConsoleLogger.cpp  ConsoleLogger.h  DummyLogger.h  FileLogger.cpp  FileLogger.h  ILogger.cpp  ILogger.h  LoggerGroup.cpp  LoggerGroup.h  LoggerManager.cpp  LoggerManager.h  LoggerMessage.cpp  LoggerMessage.h  LoggerRef.cpp  LoggerRef.h  StreamLogger.cpp  StreamLogger.h
src/miner/: BlockUtilities.cpp  BlockUtilities.h  BlockchainMonitor.cpp  BlockchainMonitor.h  Miner.cpp  Miner.h  MinerEvent.h  MinerManager.cpp  MinerManager.h  MiningConfig.cpp  MiningConfig.h  main.cpp
src/mnemonics/: CRC32.h  Mnemonics.cpp  Mnemonics.h  WordList.h
src/nigel/: Nigel.cpp  Nigel.h
src/noderpcproxy/: NodeErrors.cpp  NodeErrors.h  NodeRpcProxy.cpp  NodeRpcProxy.h
src/p2p/: ConnectionContext.h  IP2pNodeInternal.cpp  IP2pNodeInternal.h  LevinProtocol.cpp  LevinProtocol.h  NetNode.cpp  NetNode.h  NetNodeCommon.h  NetNodeConfig.cpp  NetNodeConfig.h  OnceInInterval.h  P2pConnectionProxy.cpp  P2pConnectionProxy.h  P2pContext.cpp  P2pContext.h  P2pContextOwner.cpp  P2pContextOwner.h  P2pInterfaces.cpp  P2pInterfaces.h  P2pNode.cpp  P2pNode.h  P2pNodeConfig.cpp  P2pNodeConfig.h  P2pProtocolDefinitions.h  P2pProtocolTypes.h  PeerListManager.cpp  PeerListManager.h  Peerlist.cpp  Peerlist.h  PendingLiteBlock.h
src/rpc/: CoreRpcServerCommandsDefinitions.h  CoreRpcServerErrorCodes.h  HttpClient.cpp  HttpClient.h  HttpServer.cpp  HttpServer.h  JsonRpc.cpp  JsonRpc.h  RpcServer.cpp  RpcServer.h
src/serialization/: BinaryInputStreamSerializer.cpp  BinaryInputStreamSerializer.h  BinaryOutputStreamSerializer.cpp  BinaryOutputStreamSerializer.h  BinarySerializationTools.h  BlockchainExplorerDataSerialization.cpp  BlockchainExplorerDataSerialization.h  CryptoNoteSerialization.cpp  CryptoNoteSerialization.h  ISerializer.h  IStream.h  JsonInputStreamSerializer.cpp  JsonInputStreamSerializer.h  JsonInputValueSerializer.cpp  JsonInputValueSerializer.h  JsonOutputStreamSerializer.cpp  JsonOutputStreamSerializer.h  KVBinaryCommon.h  KVBinaryInputStreamSerializer.cpp  KVBinaryInputStreamSerializer.h  KVBinaryOutputStreamSerializer.cpp  KVBinaryOutputStreamSerializer.h  MemoryStream.cpp  MemoryStream.h  SerializationOverloads.cpp  SerializationOverloads.h  SerializationTools.h
src/subwallets/: SubWallet.cpp  SubWallet.h  SubWallets.cpp  SubWallets.h
src/system/: Context.h  ContextGroup.cpp  ContextGroup.h  ContextGroupTimeout.cpp  ContextGroupTimeout.h  Event.cpp  Event.h  EventLock.cpp  EventLock.h  InterruptedException.cpp  InterruptedException.h  Ipv4Address.cpp  Ipv4Address.h  OperationTimeout.h  RemoteContext.h  RemoteEventLock.cpp  RemoteEventLock.h  TcpStream.cpp  TcpStream.h
src/transfers/: BlockchainSynchronizer.cpp  BlockchainSynchronizer.h  CommonTypes.h  IBlockchainSynchronizer.h  IObservableImpl.h  SynchronizationState.cpp  SynchronizationState.h  TransfersConsumer.cpp  TransfersConsumer.h  TransfersContainer.cpp  TransfersContainer.h  TransfersSubscription.cpp  TransfersSubscription.h  TransfersSynchronizer.cpp  TransfersSynchronizer.h  TypeHelpers.h
src/utilities/: Addresses.cpp  Addresses.h  ColouredMsg.h  Container.h  Fees.cpp  Fees.h  FormatTools.cpp  FormatTools.h  Input.cpp  Input.h  LicenseCanary.h  Mixins.cpp  Mixins.h  ParseExtra.cpp  ParseExtra.h  String.cpp  (+9 more)
(+186 files in other folders)
